--- a/content0.html
+++ b/content0.html
@@ -1,3 +1,67 @@
+<a id="cloudrest"></a>
+<ul class="titlebar">
+  <li class="title">
+    <h3>Cloud Rest</h3>
+  </li>
+  <li class="date">
+    September 2015
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/cloudrest/IMG_2732.jpg"
+      title=""
+      onclick="return hs.expand(this, config_cloudrest)">
+      <img width="160" height="120" src="thumbs/cloudrest/IMG_2732.jpg" alt="IMG_2732.jpg" />
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/cloudrest/IMG_2741.jpg"
+      title=""
+      onclick="return hs.expand(this, config_cloudrest)">
+      <img width="160" height="120" src="thumbs/cloudrest/IMG_2741.jpg" alt="IMG_2741.jpg" />
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/cloudrest/IMG_2743.jpg"
+      title=""
+      onclick="return hs.expand(this, config_cloudrest)">
+      <img width="160" height="120" src="thumbs/cloudrest/IMG_2743.jpg" alt="IMG_2743.jpg" />
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/cloudrest/IMG_2838_2835_panorama.jpg"
+      title=""
+      onclick="return hs.expand(this, config_cloudrest)">
+      <img width="327" height="120" src="thumbs/cloudrest/IMG_2838_2835_panorama.jpg" alt="IMG_2838_2835_panorama.jpg" />
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/cloudrest/IMG_2845.jpg"
+      title=""
+      onclick="return hs.expand(this, config_cloudrest)">
+      <img width="180" height="120" src="thumbs/cloudrest/IMG_2845.jpg" alt="IMG_2845.jpg" />
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/cloudrest/IMG_2926.jpg"
+      title=""
+      onclick="return hs.expand(this, config_cloudrest)">
+      <img width="180" height="120" src="thumbs/cloudrest/IMG_2926.jpg" alt="IMG_2926.jpg" />
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/cloudrest/photo1-02.jpg"
+      title=""
+      onclick="return hs.expand(this, config_cloudrest)">
+      <img width="180" height="120" src="thumbs/cloudrest/photo1-02.jpg" alt="photo1-02.jpg" />
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
 <a id="lassen"></a>
 <ul class="titlebar">
   <li class="title">
@@ -15,63 +79,90 @@
     <a class="highslide" href="hq/lassen/IMG_2643.jpg"
       title=""
       onclick="return hs.expand(this, config_lassen)">
-      <img width="160" height="120" src="thumbs/lassen/IMG_2643.jpg" alt="IMG_2643.jpg" />
+      <img class="lazy galleries/lassen" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/lassen/IMG_2643.jpg" alt="IMG_2643.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/lassen/IMG_2643.jpg" alt="IMG_2643.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot2">
     <a class="highslide" href="hq/lassen/IMG_2653.jpg"
       title=""
       onclick="return hs.expand(this, config_lassen)">
-      <img width="160" height="120" src="thumbs/lassen/IMG_2653.jpg" alt="IMG_2653.jpg" />
+      <img class="lazy galleries/lassen" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/lassen/IMG_2653.jpg" alt="IMG_2653.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/lassen/IMG_2653.jpg" alt="IMG_2653.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot3">
     <a class="highslide" href="hq/lassen/IMG_2656.jpg"
       title=""
       onclick="return hs.expand(this, config_lassen)">
-      <img width="160" height="120" src="thumbs/lassen/IMG_2656.jpg" alt="IMG_2656.jpg" />
+      <img class="lazy galleries/lassen" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/lassen/IMG_2656.jpg" alt="IMG_2656.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/lassen/IMG_2656.jpg" alt="IMG_2656.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot4">
     <a class="highslide" href="hq/lassen/IMG_2672.jpg"
       title=""
       onclick="return hs.expand(this, config_lassen)">
-      <img width="160" height="120" src="thumbs/lassen/IMG_2672.jpg" alt="IMG_2672.jpg" />
+      <img class="lazy galleries/lassen" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/lassen/IMG_2672.jpg" alt="IMG_2672.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/lassen/IMG_2672.jpg" alt="IMG_2672.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot5">
     <a class="highslide" href="hq/lassen/IMG_2674.jpg"
       title=""
       onclick="return hs.expand(this, config_lassen)">
-      <img width="160" height="120" src="thumbs/lassen/IMG_2674.jpg" alt="IMG_2674.jpg" />
+      <img class="lazy galleries/lassen" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/lassen/IMG_2674.jpg" alt="IMG_2674.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/lassen/IMG_2674.jpg" alt="IMG_2674.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot0">
     <a class="highslide" href="hq/lassen/IMG_2679.jpg"
       title=""
       onclick="return hs.expand(this, config_lassen)">
-      <img width="160" height="120" src="thumbs/lassen/IMG_2679.jpg" alt="IMG_2679.jpg" />
+      <img class="lazy galleries/lassen" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/lassen/IMG_2679.jpg" alt="IMG_2679.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/lassen/IMG_2679.jpg" alt="IMG_2679.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot1">
     <a class="highslide" href="hq/lassen/IMG_2684.jpg"
       title=""
       onclick="return hs.expand(this, config_lassen)">
-      <img width="160" height="120" src="thumbs/lassen/IMG_2684.jpg" alt="IMG_2684.jpg" />
+      <img class="lazy galleries/lassen" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/lassen/IMG_2684.jpg" alt="IMG_2684.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/lassen/IMG_2684.jpg" alt="IMG_2684.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot2">
     <a class="highslide" href="hq/lassen/IMG_2697-IMG_2709_panorama.2.jpg"
       title=""
       onclick="return hs.expand(this, config_lassen)">
-      <img width="472" height="120" src="thumbs/lassen/IMG_2697-IMG_2709_panorama.2.jpg" alt="IMG_2697-IMG_2709_panorama.2.jpg" />
+      <img class="lazy galleries/lassen" width="472" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/lassen/IMG_2697-IMG_2709_panorama.2.jpg" alt="IMG_2697-IMG_2709_panorama.2.jpg" />
+      <noscript>
+        <img width="472" height="120" src="thumbs/lassen/IMG_2697-IMG_2709_panorama.2.jpg" alt="IMG_2697-IMG_2709_panorama.2.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot3">
     <a class="highslide" href="hq/lassen/IMG_2710.jpg"
       title=""
       onclick="return hs.expand(this, config_lassen)">
-      <img width="90" height="120" src="thumbs/lassen/IMG_2710.jpg" alt="IMG_2710.jpg" />
+      <img class="lazy galleries/lassen" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/lassen/IMG_2710.jpg" alt="IMG_2710.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/lassen/IMG_2710.jpg" alt="IMG_2710.jpg" />
+      </noscript>
     </a>
   </div>
   <div style="clear:both"></div>
@@ -535,78 +626,4 @@
     </a>
   </div>
   <div style="clear:both"></div>
-</div>
-<a id="zermatt"></a> 
-<ul class="titlebar">
-  <li class="title">
-    <h3>Zermatt</h3>
-  </li>
-  <li class="date">
-    January 2015
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/zermatt/IMG_2256.jpg"
-      title=""
-      onclick="return hs.expand(this, config_zermatt)">
-      <img class="lazy galleries/zermatt" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/zermatt/IMG_2256.jpg" alt="IMG_2256.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/zermatt/IMG_2256.jpg" alt="IMG_2256.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/zermatt/IMG_2261.jpg"
-      title=""
-      onclick="return hs.expand(this, config_zermatt)">
-      <img class="lazy galleries/zermatt" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/zermatt/IMG_2261.jpg" alt="IMG_2261.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/zermatt/IMG_2261.jpg" alt="IMG_2261.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/zermatt/IMG_2267.jpg"
-      title=""
-      onclick="return hs.expand(this, config_zermatt)">
-      <img class="lazy galleries/zermatt" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/zermatt/IMG_2267.jpg" alt="IMG_2267.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/zermatt/IMG_2267.jpg" alt="IMG_2267.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/zermatt/IMG_2271.jpg"
-      title=""
-      onclick="return hs.expand(this, config_zermatt)">
-      <img class="lazy galleries/zermatt" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/zermatt/IMG_2271.jpg" alt="IMG_2271.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/zermatt/IMG_2271.jpg" alt="IMG_2271.jpg" />
-      </noscript>
-    </a>
-  </div>
-
-<div class="photo rot2">
-    <a class="vid_cursor" href="videos/zermatt.mp4" onclick="return hs.htmlExpand(this, { contentId: 'zermatt-video', preserveContent: false} )">
-      <img class="lazy" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="videos/thumb_zermatt.jpg" alt="" />
-      <noscript>
-        <img width="160" height="120" src="videos/thumb_zermatt.jpg" alt="" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
-</div>
-
-<div class="highslide-html-content" id="zermatt-video"
-    style="width: 641px">
-    <div class="highslide-body">
-      <video class="video" width="640" height="480" controls="controls" preload="none" poster="videos/zermatt.jpg">
-        <source src="videos/zermatt.mp4" type="video/mp4" />
-        Your browser does not support the video tag.
-      </video> 
-    </div>
 </div>
