--- a/content2.html
+++ b/content2.html
@@ -1,3 +1,98 @@
+<a id="emeraldsdonner"></a> 
+<ul class="titlebar">
+  <li class="title">
+    <h3>Emeralds & Donner</h3>
+  </li>
+  <li class="date">
+    June 2014
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/emeraldsdonner/10.jpg"
+      title="Benji contemplating a dyno on an great 6b+. On that day, I sent my first 7b/+ which follows the arete."
+      onclick="return hs.expand(this, config_emeraldsdonner)">
+      <img class="lazy galleries/emeraldsdonner" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/emeraldsdonner/10.jpg" alt="10.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/emeraldsdonner/10.jpg" alt="10.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/emeraldsdonner/20.jpg"
+      title="Working an old school 7b. So hard, so thin, impossible!"
+      onclick="return hs.expand(this, config_emeraldsdonner)">
+      <img class="lazy galleries/emeraldsdonner" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/emeraldsdonner/20.jpg" alt="20.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/emeraldsdonner/20.jpg" alt="20.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/emeraldsdonner/25.jpg"
+      title="Davide on Step into the Light, the best line on the wall."
+      onclick="return hs.expand(this, config_emeraldsdonner)">
+      <img class="lazy galleries/emeraldsdonner" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/emeraldsdonner/25.jpg" alt="25.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/emeraldsdonner/25.jpg" alt="25.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/emeraldsdonner/30.jpg"
+      title="Camping at D.L. Bliss never gets old. The water was 13C, much colder than last year."
+      onclick="return hs.expand(this, config_emeraldsdonner)">
+      <img class="lazy galleries/emeraldsdonner" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/emeraldsdonner/30.jpg" alt="30.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/emeraldsdonner/30.jpg" alt="30.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/emeraldsdonner/40.jpg"
+      title="Potato juggling while our gigantic steaks are cooking."
+      onclick="return hs.expand(this, config_emeraldsdonner)">
+      <img class="lazy galleries/emeraldsdonner" width="112" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/emeraldsdonner/40.jpg" alt="40.jpg" />
+      <noscript>
+        <img width="112" height="120" src="thumbs/emeraldsdonner/40.jpg" alt="40.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/emeraldsdonner/50.jpg"
+      title="A short but super technical 6c at Donner. Sequency and balancy until the very end. "
+      onclick="return hs.expand(this, config_emeraldsdonner)">
+      <img class="lazy galleries/emeraldsdonner" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/emeraldsdonner/50.jpg" alt="50.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/emeraldsdonner/50.jpg" alt="50.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/emeraldsdonner/60.jpg"
+      title="A 5.8 'offwidth' that turned out to be very easy with lots of holds for hands and feet. Here, I am locking myself by inflating my chest!"
+      onclick="return hs.expand(this, config_emeraldsdonner)">
+      <img class="lazy galleries/emeraldsdonner" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/emeraldsdonner/60.jpg" alt="60.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/emeraldsdonner/60.jpg" alt="60.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/emeraldsdonner/70.jpg"
+      title="The offwidth crack with a spicy 5c+ slab to the right."
+      onclick="return hs.expand(this, config_emeraldsdonner)">
+      <img class="lazy galleries/emeraldsdonner" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/emeraldsdonner/70.jpg" alt="70.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/emeraldsdonner/70.jpg" alt="70.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
 <a id="kokopelli"></a>
 <ul class="titlebar">
   <li class="title">
@@ -1005,168 +1100,3 @@
   </div>
   <div style="clear:both"></div>
 </div>
-<a id="Shuteye"></a> 
-<ul class="titlebar">
-  <li class="title">
-    <h3>Shuteye Ridge</h3>
-  </li>
-  <li class="date">
-    October 2013
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/shuteye/IMG_0855.jpg"
-      title=""
-      onclick="return hs.expand(this, config_shuteye)">
-      <img class="lazy galleries/shuteye" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye/IMG_0855.jpg" alt="IMG_0855.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/shuteye/IMG_0855.jpg" alt="IMG_0855.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/shuteye/IMG_0863.jpg"
-      title=""
-      onclick="return hs.expand(this, config_shuteye)">
-      <img class="lazy galleries/shuteye" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye/IMG_0863.jpg" alt="IMG_0863.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/shuteye/IMG_0863.jpg" alt="IMG_0863.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/shuteye/IMG_0863n.jpg"
-      title=""
-      onclick="return hs.expand(this, config_shuteye)">
-      <img class="lazy galleries/shuteye" width="80" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye/IMG_0863n.jpg" alt="IMG_0863n.jpg" />
-      <noscript>
-        <img width="80" height="120" src="thumbs/shuteye/IMG_0863n.jpg" alt="IMG_0863n.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/shuteye/IMG_0873.jpg"
-      title=""
-      onclick="return hs.expand(this, config_shuteye)">
-      <img class="lazy galleries/shuteye" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye/IMG_0873.jpg" alt="IMG_0873.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/shuteye/IMG_0873.jpg" alt="IMG_0873.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/shuteye/IMG_0878.jpg"
-      title=""
-      onclick="return hs.expand(this, config_shuteye)">
-      <img class="lazy galleries/shuteye" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye/IMG_0878.jpg" alt="IMG_0878.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/shuteye/IMG_0878.jpg" alt="IMG_0878.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/shuteye/IMG_0914.jpg"
-      title=""
-      onclick="return hs.expand(this, config_shuteye)">
-      <img class="lazy galleries/shuteye" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye/IMG_0914.jpg" alt="IMG_0914.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/shuteye/IMG_0914.jpg" alt="IMG_0914.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/shuteye/IMG_0923.jpg"
-      title=""
-      onclick="return hs.expand(this, config_shuteye)">
-      <img class="lazy galleries/shuteye" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye/IMG_0923.jpg" alt="IMG_0923.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/shuteye/IMG_0923.jpg" alt="IMG_0923.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/shuteye/IMG_0923n.jpg"
-      title=""
-      onclick="return hs.expand(this, config_shuteye)">
-      <img class="lazy galleries/shuteye" width="142" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye/IMG_0923n.jpg" alt="IMG_0923n.jpg" />
-      <noscript>
-        <img width="142" height="120" src="thumbs/shuteye/IMG_0923n.jpg" alt="IMG_0923n.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/shuteye/IMG_0938.jpg"
-      title=""
-      onclick="return hs.expand(this, config_shuteye)">
-      <img class="lazy galleries/shuteye" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye/IMG_0938.jpg" alt="IMG_0938.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/shuteye/IMG_0938.jpg" alt="IMG_0938.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/shuteye/IMG_0945.jpg"
-      title=""
-      onclick="return hs.expand(this, config_shuteye)">
-      <img class="lazy galleries/shuteye" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye/IMG_0945.jpg" alt="IMG_0945.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/shuteye/IMG_0945.jpg" alt="IMG_0945.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/shuteye/IMG_0951.jpg"
-      title=""
-      onclick="return hs.expand(this, config_shuteye)">
-      <img class="lazy galleries/shuteye" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye/IMG_0951.jpg" alt="IMG_0951.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/shuteye/IMG_0951.jpg" alt="IMG_0951.jpg" />
-      </noscript>
-    </a>
-  </div>
-
-  <div class="photo rot1">
-    <a class="vid_cursor" href="videos/shuteye1nr.mp4" onclick="return hs.htmlExpand(this, { contentId: 'shuteye1-video', preserveContent: false} )">
-      <img class="lazy" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="videos/thumb_shuteye1nr.jpg" alt="" />
-      <noscript>
-        <img width="160" height="120" src="videos/thumb_shuteye1nr.jpg" alt="" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="vid_cursor" href="videos/shuteye2nr.mp4" onclick="return hs.htmlExpand(this, { contentId: 'shuteye2-video', preserveContent: false} )">
-      <img class="lazy" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="videos/thumb_shuteye2nr.jpg" alt="" />
-      <noscript>
-        <img width="160" height="120" src="videos/thumb_shuteye2nr.jpg" alt="" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
-</div>
-
-<div class="highslide-html-content" id="shuteye1-video"
-    style="width: 641px">
-    <div class="highslide-body">
-      <video class="video" width="640" height="480" controls="controls" preload="none" poster="videos/shuteye1nr.jpg">
-        <source src="videos/shuteye1nr.mp4" type="video/mp4" />
-        <source src="videos/shuteye1nr.webm" type="video/webm" />
-        Your browser does not support the video tag.
-      </video> 
-    </div>
-</div>
-
-<div class="highslide-html-content" id="shuteye2-video"
-    style="width: 641px">
-    <div class="highslide-body">
-      <video class="video" width="640" height="480" controls="controls" preload="none" poster="videos/shuteye2nr.jpg">
-        <source src="videos/shuteye2nr.mp4" type="video/mp4" />
-        <source src="videos/shuteye2nr.webm" type="video/webm" />
-        Your browser does not support the video tag.
-      </video> 
-    </div>
-</div>
-
