--- a/content5.html
+++ b/content5.html
@@ -1,3 +1,68 @@
+<a id="Tallac"></a> 
+<ul class="titlebar">
+  <li class="title">
+    <h3>Tallac</h3>
+  </li>
+  <li class="date">
+    August 2012
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/tallac/1.jpg"
+      title="Fallen Leaf Lake, a small lake south west of Lake Tahoe."
+      onclick="return hs.expand(this, config_tallac)">
+      <img class="lazy galleries/tallac" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tallac/1.jpg" alt="1.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/tallac/1.jpg" alt="1.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/tallac/2.jpg"
+      title="The trail quickly leaves the forest. It must be really hot on sunny days."
+      onclick="return hs.expand(this, config_tallac)">
+      <img class="lazy galleries/tallac" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tallac/2.jpg" alt="2.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/tallac/2.jpg" alt="2.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/tallac/3.jpg"
+      title="Looking up north toward the entrance of Emerald Bay."
+      onclick="return hs.expand(this, config_tallac)">
+      <img class="lazy galleries/tallac" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tallac/3.jpg" alt="3.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/tallac/3.jpg" alt="3.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/tallac/4.jpg"
+      title="Sam and I on the summit of Mt Tallac. 1h55 to get up, 2h05 to get down."
+      onclick="return hs.expand(this, config_tallac)">
+      <img class="lazy galleries/tallac" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tallac/4.jpg" alt="4.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/tallac/4.jpg" alt="4.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/tallac/5.jpg"
+      title="Could not catch this tasty pheasant for dinner :)"
+      onclick="return hs.expand(this, config_tallac)">
+      <img class="lazy galleries/tallac" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tallac/5.jpg" alt="5.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/tallac/5.jpg" alt="5.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
 <a id="Tuolumne"></a> 
 <ul class="titlebar">
   <li class="title">
